// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Characters Container should render Characters 1`] = `
<div>
  <SearchCharacterForm
    actions={
      Object {
        "fetchCharactersByName": [MockFunction],
      }
    }
  />
  <Component
    characters={
      Object {
        "isLoading": false,
      }
    }
    isLoading={false}
  />
</div>
`;

exports[`Characters Container should render Characters with loading spinner 1`] = `
<div>
  <SearchCharacterForm
    actions={
      Object {
        "fetchCharactersByName": [MockFunction],
      }
    }
  />
  <Component
    characters={
      Object {
        "isLoading": true,
      }
    }
    isLoading={true}
  />
</div>
`;
